--- a/code/03-25_multivar_pca_partial.qmd
+++ b/code/03-25_multivar_pca_partial.qmd
@@ -237,8 +237,8 @@ weather %>%
   ggplot(aes(x = mean_dayl.s_Apr, 
              y = sum_prcp.mm_Oct)) +
   geom_point() +
-  geom_smooth(method="lm") +
-  stat_correlation()
+  geom_smooth(method="lm") #+
+  #stat_correlation()
 ```
 
 Two correlated variables:
@@ -254,8 +254,12 @@ weather %>%
 Now let's fit some models with one or two uncorrelated and correlated variables explaining fiberstrength and see what happens.  
 
 ```{r strength ~ mean_dayl.s_Apr}
-lm_dayl.apr 
-
+lm_dayl.apr <- lm(strength_gtex ~ mean_dayl.s_Apr, 
+                  data = weather
+                  ) %>%
+  tidy() %>%
+  filter(term != "(Intercept)") %>%
+  mutate(mod ="lm.dayl.apr")
 lm_dayl.apr
 
 ```
@@ -305,7 +309,13 @@ lm_dayl.apr %>%
                              "lm_2var.uncor",
                              "lm_2var.cor"))) %>%
   filter(term != "mean_dayl.s_May") %>%
-  ggplot(aes(x=mod))
+  ggplot(aes(x=mod)) +
+  geom_pointrange(aes(y = estimate,
+                      ymin = estimate - std.error,
+                      ymax = estimate + std.error
+                      ))+
+  facet_wrap( ~ term, scales = "free_y") +
+  scale_x_discrete(guide = guide_axis(n.dodge = 2))
 
 ```
 
@@ -323,6 +333,10 @@ General rule of thumb:
 Let's check the variance inflation factor (VIF) of both uncorrelated and correlated models
 ```{r vif uncorrelated}
 # Uncorrelated
+lm(strength_gtex ~ mean_dayl.s_Apr + 
+                   sum_prcp.mm_Oct,
+   data = weather) %>% 
+  vif()
 ```
 
 
@@ -358,7 +372,8 @@ Some analysis do the normalization for you (like PCA), and others don't (like k-
 
 Since both PCA and k-means only take numerical variables, let's select them now.  
 ```{r selecting only numerical vars}
-weather_n 
+weather_n <- weather %>%
+  dplyr:: select(-year, -site, -strength_gtex )
 
 weather_n
 ```
@@ -393,15 +408,18 @@ knitr::include_graphics("https://miro.medium.com/v2/resize:fit:1200/1*V4H3Cu8qGr
 Let's run PCA for our weather data.  
 
 ```{r pca model}
-mod_pca 
+mod_pca <- prcomp(weather_n, scale = T)
 
+
+mod_pca
 ```
 
 ## Choosing number of PCs  
 Based on scree plot (total variance):  
 ```{r pca checking number of components}
 # Scree plot
-
+fviz_eig(mod_pca,
+         addlabels = T)
 ```
     
 PCs 1 and 2 explain ~35% and ~26% (61%) of total variance.
@@ -409,7 +427,13 @@ This indicates that original variables were correlated (as we expected).
 
 If wanted to use enough PCs to explain 70% of total variance, how many would we need?  
 ```{r PCs to explain 70pct variance}
-
+mod_pca %>%
+  get_eig() %>%
+  mutate(pc = 1:nrow(.)) %>%
+  ggplot(aes(x = pc,
+             y= cumulative.variance.percent))+
+  geom_bar(stat = "identity") +
+  geom_hline(yintercept =70)
 
 ```
     
@@ -438,7 +462,10 @@ mod_pca$rotation %>%
 Which variables contributed most to PC1, regardless of direction?  
 
 ```{r variables contributing to PC1}
-
+fviz_contrib(mod_pca,
+              choice = "var",
+              exes = 1
+              )
 ```
   
 Let's check the eigenvectors for both PCs 1 and 2 variables:  
@@ -457,6 +484,10 @@ The longer is the eigenvector for a given variable, the more important it is tow
 Let's plot PC1 vs PC2 scores, look for any groupings.  
 
 ```{r PC1 vs PC2}
+fviz_pca_ind(mod_pca,
+              choice = "var",
+              exes = 1
+              )
 
 ```
   
@@ -474,18 +505,22 @@ Let's add the first 4 PCs to our original dataset and run a regression versus gr
 
 ```{r pca scores}
 # Extract first 4 PCs scores
-pca_scores 
+pca_scores <- mod_pca$x %>%
+  as.data.frame() %>%
+  dplyr::select(PC1:PC4)
 
 pca_scores
 ```
 
 ```{r pca regression}
 # Adding PCs 1-4 scores to original data set
-weather_postpca 
+weather_postpca <- weather %>%
+  bind_cols(pca_scores)
 
 # Regression of yield ~ PCs
 
-lm_pca 
+lm_pca <- lm(strength_gtex ~ PC1 + PC2 + PC3 +PC4,
+             data = weather_postpca)
 
 # Summary  
 summary(lm_pca)
@@ -494,12 +529,16 @@ summary(lm_pca)
 
 ```{r pca regression}
 # Checking VIF
-
+vif(lm_pca)
 ```
 
 ```{r pca regression plots}
 # Plotting strength vs PC1
-
+ggplot(weather_postpca,
+       aes(x=PC1,
+           y= strength_gtex)) +
+  geom_point()+
+  geom_smooth(method = "lm")
 ```
 
 
